--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="pattern-dots-xl"></div>
 			</div>
 			<div class="btn-pro">
-				<a href="https://drive.google.com/file/d/1ox-YLXYgktwqVNKff_GlEE2tUXBuidPf/view?usp=sharing">DOWNLOAD PORTFOLIO</a>
+				<a href="https://reurl.cc/nz4GVD">DOWNLOAD PORTFOLIO</a>
 			</div>
 		</div>
 	</article>
